list personal
