# docs/swagger.json
@@ -4,29 +4,56 @@
         "contact": {}
     },
     "paths": {
-        "/internal/migrate-public": {
-            "post": {
-                "security": [
-                    {
-                        "Authorization": []
-                    },
-                    {
-                        "Access Token": []
-                    },
-                    {
-                        "Entity Key": []
-                    },
-                    {
-                        "User ID": []
-                    }
+        "/entity-preference/update": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "tags": [
-                    "internal"
+                    "Video Ranking"
                 ],
-                "summary": "Database migration",
+                "summary": "Update Entity Preference",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "VideoID",
+                        "name": "x-video-id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "EntityID",
+                        "name": "x-entity-id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "UpdateEntityPreference",
+                        "name": "update_score",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UpdateEntityPreference"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Update entity preference success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
                     }
                 }
             }
@@ -48,13 +75,6 @@
                         "type": "string",
                         "description": "VideoID",
                         "name": "x-video-id",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "EntityID",
-                        "name": "x-entity-id",
                         "in": "header",
                         "required": true
                     },
@@ -85,7 +105,7 @@
                 }
             }
         },
-        "/video-global": {
+        "/video-global/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -117,7 +137,7 @@
                 }
             }
         },
-        "/video-personalized/{entity_id}": {
+        "/video-personalized/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -133,8 +153,8 @@
                     {
                         "type": "string",
                         "description": "EntityID",
-                        "name": "entity_id",
-                        "in": "path",
+                        "name": "x-entity-id",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -160,6 +180,26 @@
         }
     },
     "definitions": {
+        "model.UpdateEntityPreference": {
+            "type": "object",
+            "properties": {
+                "comments": {
+                    "type": "boolean"
+                },
+                "likes": {
+                    "type": "boolean"
+                },
+                "shares": {
+                    "type": "boolean"
+                },
+                "views": {
+                    "type": "boolean"
+                },
+                "watch_time": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.UpdateScoreVideo": {
             "type": "object",
             "properties": {
